Check if the array is valid before accessing it

Task-number: QTBUG-70284
Change-Id: Ic2a0613f3f57661e8c6b4665cefbd6dc73fd37f3
Reviewed-by: Volker Krause <volker.krause@kdab.com>
Reviewed-by: BogDan Vatra <bogdan@kdab.com>